...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <Button
                android:id="@+id/pip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_picture_in_picture_alt"
                android:drawablePadding="@dimen/spacing_medium"
                android:drawableTint="@android:color/black"
                android:text="@string/enter_picture_in_picture"
...
